# irods

./: CMakeLists.txt  irods_consortium_continuous_integration_build_hook.py
.github/workflows/: build_irods.yml
cmake/: IRODSConfig.cmake.not_yet_installed.in  development_library.cmake
cpp_tests/server_tests/: CMakeLists.txt  unit_tests_list.json
cpp_tests/server_tests/cmake/test_config/: irods_dstream.cmake
cpp_tests/unit_tests/: CMakeLists.txt
lib/api/include/: data_object_finalize.h
lib/core/include/: connection_pool.hpp  data_object.hpp  data_object_proxy.hpp  getRodsEnv.h  irods_user_info.hpp  key_value_proxy.hpp  objInfo.h  query_builder.hpp  replica.hpp  replica_proxy.hpp  rodsErrorTable.h  rodsKeyWdDef.h
lib/core/src/: getRodsEnv.cpp  irods_user_info.cpp
lib/filesystem/src/: collection_iterator.cpp  filesystem.cpp  path.cpp
packaging/: core.re.template
plugins/api/src/: atomic_apply_acl_operations.cpp  atomic_apply_metadata_operations.cpp  data_object_finalize.cpp  replica_close.cpp
plugins/database/src/: db_plugin.cpp
plugins/microservices/: CMakeLists.txt
plugins/microservices/msi_get_agent_pid/: libmsi_get_agent_pid.cpp
plugins/resources/: CMakeLists.txt
plugins/resources/compound/: libcompound.cpp
plugins/resources/deferred/: libdeferred.cpp
plugins/resources/load_balanced/: libload_balanced.cpp
plugins/resources/mockarchive/: libmockarchive.cpp
plugins/resources/nonblocking/: libnonblocking.cpp
plugins/resources/passthru/: libpassthru.cpp
plugins/resources/random/: librandom.cpp
plugins/resources/replication/: irods_create_write_replicator.cpp  irods_repl_rebalance.cpp  irods_repl_types.hpp  librepl.cpp
plugins/resources/univmss/: libunivmss.cpp
plugins/resources/unixfilesystem/: libunixfilesystem.cpp
scripts/irods/: convert_configuration_to_json.py  lib.py  setup_options.py
scripts/irods/test/: rule_texts_for_tests.py  test_all_rules.py  test_delay_queue.py  test_iadmin.py  test_icommands_file_operations.py  test_igroupadmin.py  test_iphymv.py  test_iput.py  test_iqmod.py  test_iuserinfo.py  test_native_rule_engine_plugin.py
server/api/include/: rsDataObjClose.hpp  rs_data_object_finalize.hpp  rs_finalize_data_object.hpp
server/api/src/: rsDataObjChksum.cpp  rsDataObjClose.cpp  rsDataObjCopy.cpp  rsDataObjGet.cpp  rsDataObjOpen.cpp  rsDataObjPhymv.cpp  rsDataObjPut.cpp  rsDataObjRename.cpp  rsDataObjRepl.cpp  rsDataObjRsync.cpp  rsDataObjTrim.cpp  rsDataObjUnlink.cpp  rsExecCmd.cpp  rsFileStageToCache.cpp  rsGetHostForGet.cpp  rsGetHostForPut.cpp  rsGetRemoteZoneResc.cpp  rsObjStat.cpp  rsPhyBundleColl.cpp  rsPhyPathReg.cpp  rsQuerySpecColl.cpp  rsStructFileBundle.cpp  rs_data_object_finalize.cpp  rs_finalize_data_object.cpp
server/core/include/: catalog_utilities.hpp  irods_delay_queue.hpp  irods_file_object.hpp  irods_physical_object.hpp  irods_resource_manager.hpp  irods_resource_redirect.hpp  irods_server_control_plane.hpp  irods_server_state.hpp  logical_locking.hpp  replica_state_table.hpp
server/core/src/: catalog.cpp  catalog_utilities.cpp  collection.cpp  (+15 more)
unit_tests/src/: test_data_object_finalize.cpp  test_data_object_proxy.cpp  test_rc_data_obj.cpp  test_replica.cpp  test_replica_state_table.cpp
(+3 files in other folders)
